--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,17 @@
 <!doctype html>
-<html>
+<html lang="ja">
+
+<head>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://code.getmdl.io/1.3.0/material.indigo-pink.min.css">
+</head>
 
 <body>
     <div id="app"></div>
 </body>
 
+<script defer src="https://code.getmdl.io/1.3.0/material.min.js"></script>
 <script src="./dist/renderer.js"></script>
 
 </html>
